syntax = "proto3";

package wallet;

service WalletService {
    // Export private key for a user by user_id
    rpc ExportPrivateKey(ExportPrivateKeyRequest) returns (ExportPrivateKeyResponse);
}

message ExportPrivateKeyRequest {
    string user_id = 1;
}

message ExportPrivateKeyResponse {
    bool success = 1;
    string private_key = 2;
    string message = 3;
}

